@@ -1,6 +1,6 @@
 MD5 592791e9744e39f04a41677e39729970 trswm-0.4.9.ebuild 1350
-MD5 8a6489c4d9aa14401db3981520316a3b trswm-0.3.ebuild 762
-MD5 abaf4499867fb8275e3a9e03dd1a9a14 ChangeLog 748
+MD5 6b7113d76b0a553439acfaaeff83a73e trswm-0.3.ebuild 735
+MD5 6e68b0f4ab95a9d7b278d8d9abcba8bd ChangeLog 904
 MD5 e7307c1653035014c1e36a27ca8ccb45 metadata.xml 163
 MD5 72d307e32c81a38a097d38268f82bc63 files/trswm 2817
 MD5 3b077cf8b663647f78eaafdbf42b8aec files/digest-trswm-0.4.9 63
