@@ -1,15 +1,17 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/trswm/Attic/trswm-0.3.ebuild,v 1.2 2003/09/04 07:33:31 msterret Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/trswm/Attic/trswm-0.3.ebuild,v 1.3 2003/12/31 04:26:11 obz Exp $
 
 DESCRIPTION="A window manager"
 HOMEPAGE="http://www.relex.ru/~yarick/trswm/"
 SRC_URI="http://www.relex.ru/~yarick/trswm/${P}.tar.gz
 	http://www.relex.ru/~yarick/trswm/trswm-config.tar.gz"
 LICENSE="as-is"
+
 SLOT="0"
-KEYWORDS="~alpha ~arm ~hppa ~mips ~sparc ~x86"
+KEYWORDS="~x86 ~sparc"
 IUSE=""
+
 DEPEND="=dev-lang/lua-4.0*"
 
 src_compile() {
